tests/paczka1/small_fuzzy/94900981.err
Error in line 4: opZb S184 43,7
Error in line 9: vaAe S117 18,0
